--- a/docs/content/about-iota/iota-architecture/epochs.mdx
+++ b/docs/content/about-iota/iota-architecture/epochs.mdx
@@ -1,27 +1,38 @@
----
-title: Epochs and Reconfiguration
-draft: true
----
-
-In a simplified view, epochs are to the IOTA network what individual days are to a calendar. Reconfiguration, then, is a process at the end of each epoch where that day's activity is tallied and the next day's parameters are set.
+# Epochs and Reconfiguration
 
 ## Epoch
 
-An epoch is a duration of time where the IOTA validator set and their stakes remain unchanged. On both Mainnet and Testnet, an epoch is about 24 hours. This timeframe allows validators to process transactions efficiently without worrying about ad hoc validator changes during the middle of an epoch.
+In IOTA, an epoch is a set period, around 24 hours, during which the
+IOTA [validator](../tokenomics/validators-staking.mdx) set and their stakes remain constant. This stable period allows
+validators to handle transactions smoothly without unexpected changes.
 
-Epoch values are included in the metadata of transactions on the IOTA network, but the average user is unaffected by its value. The only time a user might need to know about epochs is in the case of expiring transactions, where a transaction is only valid if executed before a set epoch. See [Transactions](../../developer/iota-101/transactions/transactions.mdx) for more information about transactions on IOTA.
+Epoch values are part of the transaction data on the IOTA network, but regular users don't need to worry about them.
+Users only need to know about epochs if they are dealing with
+expiring [transactions](../../developer/iota-101/transactions/transactions.mdx), which must be completed before a
+specific epoch ends.
 
 ## Reconfiguration
 
-Reconfiguration is a critical process occurring at the end of each epoch. It involves several key steps to adjust the network for the upcoming epoch:
+Reconfiguration is an important process that happens at the end of each epoch to prepare the network for the next one.
+It includes these key steps:
 
-1. **Finalizing transactions and checkpoints**
-    - The network reaches consensus on the final set of transactions and checkpoints for the current epoch. This ensures all validators have an identical state at epoch conclusion.
-    - **Synchronous moment:** This is the only fully synchronous event in the network, crucial for maintaining consistency.
-1. **Distribution of gas rewards**
-    - Computation gas fees are distributed to the validator staking reward pool, from which stakers can withdraw.
-1. **Validator set change**
-    - Any pending staking and unstaking requests during the epoch are finalized and reflected in validators stake distribution.
-    - Any pending validator change requests are also processed, including adding new validators and removing existing validators. This is the sole opportunity for altering the validator set and stake distribution.
-1. **Protocol upgrade**
-    - If agreed upon by 2f+1 validators, the network might upgrade to a new protocol version, encompassing new features, bug fixes, and updates to Move framework libraries.
+### 1. Finalizing Transactions and Checkpoints
+
+The network agrees on the final set of transactions and checkpoints for the current epoch, ensuring all validators have
+the same information. This is the only time the network is fully synchronized, known as a _synchronous moment_, which is
+essential for consistency.
+
+### 2. Distribution of Gas Rewards
+
+Computation gas fees are distributed to the validator staking reward pool, allowing stakers to withdraw their rewards.
+
+### 3. Validator Set Change
+
+Any pending staking and unstaking requests are finalized and reflected in the validators' stake distribution. Any
+pending changes to the validator set, such as adding or removing validators, are processed. This is the only time the
+validator set and stake distribution can be altered.
+
+### 4. Protocol Upgrade
+
+If 2f+1 validators agree, the network may upgrade to a new protocol version, which includes new features, bug fixes, and
+updates to the Move framework libraries.
