--- a/docs/content/about-iota/tokenomics.mdx
+++ b/docs/content/about-iota/tokenomics.mdx
@@ -17,11 +17,11 @@ Three main types of participants characterize the IOTA economy:
 
 ## Core components
 
-The IOTA economy is composed of four core components:
+The IOTA economy is composed of five core components:
 
 - **[IOTA](./tokenomics/iota-token.mdx):** The IOTA token is the IOTA platform native asset.
-- **[Gas fees](./tokenomics/gas-in-iota.mdx):** Gas fees are charged on all network operations and used to reward participants of the proof-of-stake mechanism and prevent spam and denial-of-service attacks.
-- **[Proof-of-stake](./tokenomics/proof-of-stake.mdx):** The delegated proof-of-stake mechanism is used to select, incentivize, and reward honest behavior by IOTA Validators and the IOTA owners that stake with them.
+- **[Gas fees](./tokenomics/gas-in-iota.mdx):** Gas fees are charged on all network operations, consisting of a computation fee component and a fully rebated storage deposit component.
+- **[Staking rewards](./tokenomics/proof-of-stake.mdx):** Staking rewards are provided to users participating in the delegated proof-of-stake mechanism, namely delegators and validators. This incentivizes honest behavior by IOTA Validators and the IOTA token holder that delegate to them.
 - **Voting:** On-chain voting is used for governance and protocol upgrades.
 
 
