--- a/docs/content/about-iota/tokenomics/gas-in-iota.mdx
+++ b/docs/content/about-iota/tokenomics/gas-in-iota.mdx
@@ -1,17 +1,19 @@
 ---
 title: Gas in IOTA
-description: A IOTA transaction must pay for both the computational cost of execution and the long-term cost of storing the objects a transaction creates or mutates.
+description: A IOTA transaction must both pay for the computational cost of execution and pay a deposit for storing the objects a transaction creates or mutates.
 ---
 
-An IOTA transaction must pay for both the computational cost of execution and the long-term cost of storing the objects a transaction creates or mutates. Specifically, [IOTA Gas Pricing](gas-pricing.mdx) is such that any transaction pays the following gas fees:
+An IOTA transaction must both pay for the computational cost of execution and pay a deposit for storing the objects a transaction creates or mutates. Specifically, [IOTA Gas Pricing](gas-pricing.mdx) is such that any transaction pays the following gas fees:
 
 `total_gas_fees = computation_units * reference_gas_price + storage_units * storage_price`
 
-While computation and storage fees are separate, they are conceptually similar in that they each translate computation or storage into IOTA terms by multiplying computation or storage units by the relevant price.
+The storage component is 100% rebated upon deletion of the corresponding object from storage, and for this reason, the terms `storage fee' and `storage deposit' are used interchangeably.
 
-Finally, storage fee rebates are provided whenever a transaction deletes previously stored objects. Hence, the net fees that a user pays equals gas fees minus the rebates associated with data deletion:
+While computation fees and storage deposits are separate, they are conceptually similar in that they each translate computation or storage into IOTA terms by multiplying computation or storage units by the relevant price.
 
-`net_gas_fees = computation_gas_fee + storage_gas_fee - storage_rebate`
+Finally, storage rebates are provided whenever a transaction deletes previously stored objects. Hence, the net fees that a user pays equals gas fees minus the rebates associated with data deletion:
+
+`net_gas_fees = computation_fee + storage_deposit - storage_rebate`
 
 The information on net gas fees displays in the [IOTA network explorer](https://explorer.iota.cafe/) for each transaction block.
 
@@ -53,7 +55,7 @@ Using coarse bucketing accomplishes two important goals:
 
 Similarly, IOTA transactions vary depending on the amount of new data written into on-chain storage. The variable storage units capture these differences by mapping the amount of bytes held in storage into storage units. The current IOTA schedule is linear and maps each byte into 100 storage units. So, for example, a transaction that stores 25 bytes costs 2,500 storage units, while a transaction that stores 75 bytes costs 7,500 units.
 
-Importantly, in the storage model users pay storage deposit fees for storing data in perpetuity but can also get a full rebate on previously stored data, if that data is deleted. Hence, the amount of storage fees that you pay are 100% rebateable.
+Importantly, in the IOTA's storage model users pay storage deposit fees for storing data in perpetuity but can also get a full rebate on previously stored data, if that data is deleted. Hence, the amount of storage fees that you pay are 100% rebateable. This storage deposit mechanism incentivizes users to minimize the storage burden they place on all nodes by reducing their storage requirements and cleaning up unused objects. 
 
 ### Gas budgets {#gas-budgets}
 
@@ -69,7 +71,7 @@ Ultimately, a successful transaction requires the end user to pay the transactio
 
 Importantly, the minimum gas budget is 1000 NANOS (.000001 IOTA). This ensures validators are compensated with at least 1,000 NANOS even if the gas budget is incorrectly specified and the transaction aborts. Additionally, this protects the IOTA network from being spammed with a large number of transactions with minimal gas budgets. The maximum gas budget is 50 billion NANOS or 50 IOTA. This protects the network against overflow of internal multiplications and gas limits for denial of service attacks.
 
-As mentioned previously, the storage rebate currently equals 99% of the originally paid storage fees. Because the gas budget applies to the totality of gas fees, it is often the case that a transaction only goes through if the gas budget is considerably higher than the net gas fees that a user ultimately pays.
+As mentioned previously, the storage rebate is 100% of the originally paid storage fees. Because the gas budget applies to the totality of gas fees, it is often the case that a transaction only goes through if the gas budget is considerably higher than the net gas fees that a user ultimately pays.
 
 ### Gas budget examples {#gas-budget-examples}
 
