--- a/docs/content/developer/iota-101/move-overview/collections.mdx
+++ b/docs/content/developer/iota-101/move-overview/collections.mdx
@@ -1,74 +1,93 @@
 ---
-title: Collections
-description: The IOTA framework provides several modules you can use to work with groups of data.
+description: An overview of various collection types in the IOTA framework.
 ---
 
-Collections provide a convenient way to work with groups of data. The IOTA framework provides several modules that provide collection logic:
+# Collections
 
-## bag
+Collections in the IOTA framework offer versatile ways to manage groups of data, each tailored to different use cases.
 
-A bag is a heterogeneous map-like collection. The collection is similar to `iota::table` in that its keys and values are not stored within the Bag value, but instead are stored using IOTA's object system. The Bag struct acts only as a handle into the object system to retrieve those keys and values. This means that Bag values with exactly the same key-value mapping will not be equal, with ==, at runtime.
+:::tip Learn More
 
-To learn more, see [Table and Bag](../objects/dynamic-fields/tables-bags.mdx) or the [framework definition](/references/framework/iota-framework/bag.mdx) on GitHub.
+This document serves as an overview, 
+you can learn more about [Dynamic Fields](../objects/dynamic-fields/dynamic-fields.mdx) and [Tables and Bags](../objects/dynamic-fields/tables-bags.mdx) in the [Objects section](../objects/object-model.mdx).
 
-## dynamic_field
+:::
 
-In addition to the fields declared in its type definition, a IOTA object can have dynamic fields that can be added after the object has been constructed. Unlike ordinary field names (which are always statically declared identifiers) a dynamic field name can be any value with the copy, drop, and store abilities (for example, an integer, a boolean, or a string). This gives IOTA programmers the flexibility to extend objects on-the-fly, and it also serves as a building block for core collection types.
+## Bag
 
-To learn more, see [Dynamic Fields](../objects/dynamic-fields/dynamic-fields.mdx) or the [framework definition](/references/framework/iota-framework/dynamic_field.mdx) on GitHub.
+The [`Bag`](../../../references/framework/iota-framework/bag.mdx) module functions as a versatile, map-like collection.
+Unlike conventional maps, the `Bag` does not store its keys and values directly.
+Instead, it leverages IOTA's object system to manage storage,
+with the `Bag` struct serving as a handle for retrieving these elements.
+It's important to note that `Bag` instances with identical key-value pairs may not be considered equal
+(`==`) during runtime.
 
-## dynamic_object_field
+## Object Bag
 
-Similar to `iota::dynamic_field`, this module allows for the access of dynamic fields. But unlike, `iota::dynamic_field` the values bound to these dynamic fields must be objects themselves. This allows for the objects to still exist within storage, which may be important for external tools. The difference is otherwise not observable from within Move.
+`ObjectBag` builds on the `Bag` concept but requires that all associated values be objects. This ensures that these
+objects remain accessible in storage, which might be necessary for interaction with external tools. As with `Bag`, this
+difference is not evident within Move itself.
 
-To learn more, see [Dynamic Fields](../objects/dynamic-fields/dynamic-fields.mdx) or the [framework definition](/references/framework/iota-framework/dynamic_object_field.mdx) on GitHub.
+## Dynamic Field
 
-## linked_table
+IOTA objects can extend beyond their predefined fields by
+incorporating [`iota::dynamic_field`](../../../references/framework/iota-framework/dynamic_field.mdx)s post-construction.
+Unlike static field names, dynamic fields can be any value with `copy`, `drop`, and `store` abilities
+(e.g., integers, booleans, strings).
+This flexibility enables on-the-fly enhancements to objects,
+serving as a fundamental component for various collection types.
 
-Similar to `iota::table` but the values are linked together, allowing for ordered insertion and removal.
+## Dynamic Object Field
 
-To learn more, see the [framework definition](/references/framework/iota-framework/linked_table.mdx) on GitHub.
+The [`iota::dynamic_object_field`](../../../references/framework/iota-framework/dynamic_object_field.mdx) module is similar
+to `iota::dynamic_field`,
+with the distinction that the values associated with these dynamic fields must themselves be objects.
+This design ensures that these objects remain in storage, which is crucial for compatibility with external tools.
+Internally, this difference is not noticeable in Move.
 
-## object_bag
+## Table
 
-Similar to `iota::bag`, an `ObjectBag` is a heterogeneous map-like collection. But unlike `iota::bag`, the values bound to these dynamic fields must be objects themselves. This allows for the objects to still exist in storage, which might be important for external tools. The difference is otherwise not observable from within Move.
+The [`Table`](../../../references/framework/iota-framework/table.mdx) module operates as a map-like collection but with a twist. 
+Instead of directly storing keys and values,
+the `Table` relies on IOTA's object system for storage.
+The `Table` struct itself acts merely as a handle to access these elements.
+This means that two `Table` instances with identical key-value pairs might not be considered equal (`==`) at runtime.
 
-To learn more, see [Table and Bag](../objects/dynamic-fields/tables-bags.mdx) or the [framework definition](/references/framework/iota-framework/object_bag.mdx) on GitHub.
+## Linked Table
 
-## object_table
+[`LinkedTable`](../../../references/framework/iota-framework/linked_table.mdx) extends the functionality of the `Table` module by linking values together, allowing for ordered insertion
+and removal.
+This feature is particularly useful for scenarios where the order of elements is important.
 
-Similar to `iota::table`, an `ObjectTable<K, V>` is a map-like collection. But unlike `iota::table`, the values bound to these dynamic fields must be objects themselves. This allows for the objects to still exist within in storage, which may be important for external tools. The difference is otherwise not observable from within Move.
+## Table Vec
 
-To learn more, see [Table and Bag](../objects/dynamic-fields/tables-bags.mdx) or the [framework definition](/references/framework/iota-framework/object_table.mdx) on GitHub.
+[`TableVec`](../../../references/framework/iota-framework/table_vec.mdx) is a scalable vector library implemented using the `Table` module, providing a flexible way to manage
+sequential data.
 
-## priority_queue
+## Object Table
 
-Priority queue implemented using a max heap.
+[`ObjectTable<K, V>`](../../../references/framework/iota-framework/object_table.mdx)  is akin to the `Table` module, but with a requirement that all associated values are objects. This
+design choice ensures that these objects persist in storage, which may be essential for certain external tools. Within
+Move, this difference remains unnoticeable.
 
-To learn more, see the [framework definition](/references/framework/iota-framework/priority_queue.mdx) on GitHub.
+## Priority Queue
 
-## table
-
-A table is a map-like collection. But unlike a traditional collection, its keys and values are not stored within the Table value, but instead are stored using IOTA's object system. The Table struct acts only as a handle into the object system to retrieve those keys and values. Note that this means that Table values with exactly the same key-value mapping will not be equal, with ==, at runtime.
-
-To learn more, see [Table and Bag](../objects/dynamic-fields/tables-bags.mdx) or the [framework definition](/references/framework/iota-framework/table.mdx) on GitHub.
-
-## table_vec
-
-A basic scalable vector library implemented using Table.
-
-To learn more, see the [framework definition](/references/framework/iota-framework/table_vec.mdx) on GitHub.
-
-## vec_map
-
-A map data structure backed by a vector. The map is guaranteed not to contain duplicate keys, but entries are not sorted by key--entries are included in insertion order. All operations are O(N) in the size of the map--the intention of this data structure is only to provide the convenience of programming against a map API. Large maps should use handwritten parent/child relationships instead. Maps that need sorted iteration rather than insertion order iteration should also be handwritten.
-
-To learn more, see the [framework definition](/references/framework/iota-framework/vec_map.mdx) on GitHub.
-
-## vec_set
-
-The main object for `vec_set` is a set data structure backed by a vector. The set is guaranteed not to contain duplicate keys. All operations are O(N) in the size of the set. The intention of this data structure is only to provide the convenience of programming against a set API. Sets that need sorted iteration rather than insertion order iteration should be handwritten.
-
-To learn more, see the [framework definition](/references/framework/iota-framework/vec_set.mdx) on GitHub.
+The [`PriorityQueue`](../../../references/framework/iota-framework/priority_queue.mdx) module is implemented using a max heap,
+providing an efficient way to manage prioritized elements.
 
 
+## Vec Map
+
+The [`VecMap`](../../../references/framework/iota-framework/vec_map.mdx) module provides a map-like structure backed by a vector.
+While it guarantees no duplicate keys, entries are stored in insertion order rather than being sorted by key.
+Operations on this structure are O(N) relative to the map's size.
+This design is intended for scenarios where convenience is more critical than performance. For large maps or
+sorted iteration, alternative structures are recommended.
+
+## Vec Set
+
+[`VecSet`](../../../references/framework/iota-framework/vec_set.mdx) is a set-like data structure backed by a vector,
+ensuring no duplicate keys.
+All operations are O(N) in relation to the set's size.
+Like `VecMap`, this structure is designed for convenience, not performance. 
+For sorted iteration or large sets, consider using custom structures.
